NETPOL/pods-NetworkPolicies/NetPol_cluster-dns-only.yml
apiVersion: networking.k8s.io/v1
# Allow all DNS queries
kind: NetworkPolicy
metadata:
  name: np-cluster-dns 
  # namespace: default
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    # To intra cluster DNS only
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
