NETPOL/pods-NetworkPolicies/NetPol_ingress_Kong-2-frontends.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-kong-to-frontends
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
       netzone: frontend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kong
      podSelector:
        matchLabels:
          app: kong-gateway
    ports:
    - protocol: TCP
      port: 1111
    - protocol: TCP
      port: 3333
